--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,15 @@
                 "<node_internals>/**"
             ],
             "program": "${workspaceFolder}/program.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run Current File",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${file}"
         }
     ]
 }
